--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                         <i class="flaticon-calendar"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Opening Hour</h3>
-                                        <p>Mon - Fri, 8:00 - 9:00</p>
+                                        <h3>Disponibilidad</h3>
+                                        <p>Lunes a Viernes, 8:00 - 9:00</p>
                                     </div>
                                 </div>
                             </div>
@@ -62,8 +62,8 @@
                                         <i class="flaticon-call"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Call Us</h3>
-                                        <p>+012 345 6789</p>
+                                        <h3>Contáctanos</h3>
+                                        <p>+52 999 125 8521</p>
                                     </div>
                                 </div>
                             </div>
@@ -73,8 +73,8 @@
                                         <i class="flaticon-send-mail"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Email Us</h3>
-                                        <p>info@example.com</p>
+                                        <h3>Email</h3>
+                                        <p>karina@gmail.com</p>
                                     </div>
                                 </div>
                             </div>
@@ -96,19 +96,13 @@
 
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Service</a>
-                            <a href="team.html" class="nav-item nav-link">Team</a>
-                            <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu">
-                                    <a href="blog.html" class="dropdown-item">Blog Page</a>
-                                    <a href="single.html" class="dropdown-item">Single Page</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                            <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                            <a href="service.html" class="nav-item nav-link">Servicios</a>
+                            <a href="team.html" class="nav-item nav-link">Equipo</a>
+                            <a href="portfolio.html" class="nav-item nav-link">Proyectos</a>
+
+                            <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
                         </div>
                         <div class="ml-auto">
                             <a class="btn" href="#">Get A Quote</a>
@@ -131,8 +125,8 @@
                 <div class="carousel-item active">
                     <img src="img/carousel-1.jpg" alt="Carousel Image">
                     <div class="carousel-caption">
-                        <p class="animated fadeInRight">We Are Professional</p>
-                        <h1 class="animated fadeInLeft">For Your Dream Project</h1>
+                        <p class="animated fadeInRight">Vendedores profecionales</p>
+                        <h1 class="animated fadeInLeft">Encuentra lo que necesites</h1>
                         <a class="btn animated fadeInUp"
                             href="https://htmlcodex.com/construction-company-website-template">Get A Quote</a>
                     </div>
@@ -141,8 +135,8 @@
                 <div class="carousel-item">
                     <img src="img/carousel-2.jpg" alt="Carousel Image">
                     <div class="carousel-caption">
-                        <p class="animated fadeInRight">Professional Builder</p>
-                        <h1 class="animated fadeInLeft">We Build Your Home</h1>
+                        <p class="animated fadeInRight">Compradores justos</p>
+                        <h1 class="animated fadeInLeft">Organizate con nosotros</h1>
                         <a class="btn animated fadeInUp"
                             href="https://htmlcodex.com/construction-company-website-template">Get A Quote</a>
                     </div>
@@ -151,8 +145,8 @@
                 <div class="carousel-item">
                     <img src="img/carousel-3.jpg" alt="Carousel Image">
                     <div class="carousel-caption">
-                        <p class="animated fadeInRight">We Are Trusted</p>
-                        <h1 class="animated fadeInLeft">For Your Dream Home</h1>
+                        <p class="animated fadeInRight">Rentadores confiables</p>
+                        <h1 class="animated fadeInLeft">Contamos con excelentes hogares</h1>
                         <a class="btn animated fadeInUp"
                             href="https://htmlcodex.com/construction-company-website-template">Get A Quote</a>
                     </div>
@@ -161,11 +155,11 @@
 
             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only">Anterior</span>
             </a>
             <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+                <span class="sr-only">Siguiente</span>
             </a>
         </div>
         <!-- Carousel End -->
@@ -181,8 +175,8 @@
                                 <i class="flaticon-worker"></i>
                             </div>
                             <div class="feature-text">
-                                <h3>Expert Worker</h3>
-                                <p>Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare velit non</p>
+                                <h3>Equipo de expertos</h3>
+                                <p>Estamos conformados por egresados de la UTM con 10 años de experiencia.</p>
                             </div>
                         </div>
                     </div>
@@ -192,8 +186,8 @@
                                 <i class="flaticon-building"></i>
                             </div>
                             <div class="feature-text">
-                                <h3>Quality Work</h3>
-                                <p>Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare velit non</p>
+                                <h3>Trabajo de calidad</h3>
+                                <p>Si vale la pena lo haremos, sino obviamente no.</p>
                             </div>
                         </div>
                     </div>
@@ -203,8 +197,8 @@
                                 <i class="flaticon-call"></i>
                             </div>
                             <div class="feature-text">
-                                <h3>24/7 Support</h3>
-                                <p>Lorem ipsum dolor sit amet elit. Phasus nec pretim ornare velit non</p>
+                                <h3>Soporte cuando sea necesario</h3>
+                                <p>Llamenos cuando sea de vida o muerte</p>
                             </div>
                         </div>
                     </div>
@@ -225,22 +219,27 @@
                     </div>
                     <div class="col-lg-7 col-md-6">
                         <div class="section-header text-left">
-                            <p>Welcome to Builderz</p>
-                            <h2>25 Years Experience</h2>
+                            <p>Bienvenido a IMPERIUM</p>
+                            <h2>25 años de experiencia</h2>
                         </div>
                         <div class="about-text">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi.
-                                Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
-                                condimentum, viverra quis sem.
+                                Somos una empresa dedicada al apasionante mundo de la compra, venta y renta de
+                                propiedades, con el objetivo principal de facilitar y garantizar un proceso de
+                                urbanización eficiente y satisfactorio. Nuestra misión consiste en brindar soluciones
+                                integrales y personalizadas a nuestros clientes, asegurando que encuentren la propiedad
+                                perfecta que se ajuste a sus necesidades y deseos, ya sea para vivir, invertir o
+                                desarrollar proyectos inmobiliarios.
                             </p>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi.
-                                Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
-                                condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean
-                                consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
+                                Contamos con un equipo altamente calificado y comprometido, conformado por expertos en
+                                el mercado inmobiliario, agentes de bienes raíces, abogados y especialistas en
+                                financiamiento, que se encargan de guiar y asesorar a nuestros clientes en cada etapa
+                                del proceso. Nos enorgullece mantenernos actualizados sobre las últimas tendencias y
+                                regulaciones en el sector, lo que nos permite brindar un servicio de vanguardia y
+                                adaptado a las necesidades cambiantes del mercado.
                             </p>
-                            <a class="btn" href="">Learn More</a>
+                            <a class="btn" href="">Conoce más</a>
                         </div>
                     </div>
                 </div>
@@ -260,8 +259,8 @@
                                     <i class="flaticon-worker"></i>
                                 </div>
                                 <div class="fact-text">
-                                    <h2 data-toggle="counter-up">109</h2>
-                                    <p>Expert Workers</p>
+                                    <h2 data-toggle="counter-up">102</h2>
+                                    <p>Trabajadores expertos</p>
                                 </div>
                             </div>
                             <div class="col-6">
@@ -269,8 +268,8 @@
                                     <i class="flaticon-building"></i>
                                 </div>
                                 <div class="fact-text">
-                                    <h2 data-toggle="counter-up">485</h2>
-                                    <p>Happy Clients</p>
+                                    <h2 data-toggle="counter-up">244</h2>
+                                    <p>Clientes satisfechos</p>
                                 </div>
                             </div>
                         </div>
@@ -282,8 +281,8 @@
                                     <i class="flaticon-address"></i>
                                 </div>
                                 <div class="fact-text">
-                                    <h2 data-toggle="counter-up">789</h2>
-                                    <p>Completed Projects</p>
+                                    <h2 data-toggle="counter-up">1078</h2>
+                                    <p>Proyectos completados</p>
                                 </div>
                             </div>
                             <div class="col-6">
@@ -291,8 +290,8 @@
                                     <i class="flaticon-crane"></i>
                                 </div>
                                 <div class="fact-text">
-                                    <h2 data-toggle="counter-up">890</h2>
-                                    <p>Running Projects</p>
+                                    <h2 data-toggle="counter-up">259</h2>
+                                    <p>Proyectos en proceso</p>
                                 </div>
                             </div>
                         </div>
@@ -307,8 +306,8 @@
         <div class="service">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Our Services</p>
-                    <h2>We Provide Services</h2>
+                    <p>Nuestros servicios</p>
+                    <h2>Podemos ofrecerte esto:</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
