--- a/team.html
+++ b/team.html
@@ -96,19 +96,13 @@
 
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Service</a>
-                            <a href="team.html" class="nav-item nav-link active">Team</a>
-                            <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu">
-                                    <a href="blog.html" class="dropdown-item">Blog Page</a>
-                                    <a href="single.html" class="dropdown-item">Single Page</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="index.html" class="nav-item nav-link">Inicio</a>
+                            <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                            <a href="service.html" class="nav-item nav-link">Servicios</a>
+                            <a href="team.html" class="nav-item nav-link active">Equipo</a>
+                            <a href="portfolio.html" class="nav-item nav-link">Proyectos</a>
+
+                            <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
                         </div>
                         <div class="ml-auto">
                             <a class="btn" href="#">Get A Quote</a>
