I update the about and contact contains bugs

--- a/contact.html
+++ b/contact.html
@@ -119,11 +119,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Contact Us</h2>
+                        <h2>Contáctanos</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Contact Us</a>
+                        <a href="">Inicio</a>
+                        <a href="">Contáctanos</a>
                     </div>
                 </div>
             </div>
@@ -169,29 +169,31 @@
                             <div id="success"></div>
                             <form name="sentMessage" id="contactForm" novalidate="novalidate">
                                 <div class="control-group">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name"
-                                        required="required" data-validation-required-message="Please enter your name" />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email"
+                                    <input type="text" class="form-control" id="name" placeholder="Tu nombre completo"
                                         required="required"
-                                        data-validation-required-message="Please enter your email" />
+                                        data-validation-required-message="Por favor, necesitamos saber nombre" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject"
-                                        required="required" data-validation-required-message="Please enter a subject" />
+                                    <input type="email" class="form-control" id="email"
+                                        placeholder="Tu correo electrónico" required="required"
+                                        data-validation-required-message="Sin tu correo no podremos comunicarnos" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group">
-                                    <textarea class="form-control" id="message" placeholder="Message"
+                                    <input type="text" class="form-control" id="subject" placeholder="Motivo"
                                         required="required"
-                                        data-validation-required-message="Please enter your message"></textarea>
+                                        data-validation-required-message="Es necesario para agilizar la comunicación" />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="control-group">
+                                    <textarea class="form-control" id="message" placeholder="Descripción"
+                                        required="required"
+                                        data-validation-required-message="Es necesario para que sepamos como ayudarte"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div>
-                                    <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
+                                    <button class="btn" type="submit" id="sendMessageButton">Envíar mensaje</button>
                                 </div>
                             </form>
                         </div>
@@ -292,6 +294,7 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/slick/slick.min.js"></script>
+
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
