--- a/contact.html
+++ b/contact.html
@@ -135,8 +135,8 @@
         <div class="contact wow fadeInUp">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Get In Touch</p>
-                    <h2>For Any Query</h2>
+                    <p>El poder de contáctarnos</p>
+                    <h2>Al alcance de tus manos</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
@@ -144,22 +144,22 @@
                             <div class="contact-item">
                                 <i class="flaticon-address"></i>
                                 <div class="contact-text">
-                                    <h2>Location</h2>
-                                    <p>123 Street, New York, USA</p>
+                                    <h2>Ubicación</h2>
+                                    <p>C. 111 315, Santa Rosa, 97279 Mérida, Yuc.</p>
                                 </div>
                             </div>
                             <div class="contact-item">
                                 <i class="flaticon-call"></i>
                                 <div class="contact-text">
-                                    <h2>Phone</h2>
-                                    <p>+012 345 67890</p>
+                                    <h2>Celular</h2>
+                                    <p>+52 999 125 8521</p>
                                 </div>
                             </div>
                             <div class="contact-item">
                                 <i class="flaticon-send-mail"></i>
                                 <div class="contact-text">
-                                    <h2>Email</h2>
-                                    <p>info@example.com</p>
+                                    <h2>Correo electrónico</h2>
+                                    <p>karina@gmail.com</p>
                                 </div>
                             </div>
                         </div>
