--- a/portfolio.html
+++ b/portfolio.html
@@ -119,11 +119,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Our Projects</h2>
+                        <h2>Nuestros proyectos</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Our Projects</a>
+                        <a href="">Inicio</a>
+                        <a href="">Nuestros proyectos</a>
                     </div>
                 </div>
             </div>
@@ -135,16 +135,16 @@
         <div class="portfolio">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Our Projects</p>
-                    <h2>Visit Our Projects</h2>
+                    <p>Nuestros proyectos</p>
+                    <h2>Mira nuestro trabajo</h2>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <ul id="portfolio-flters">
-                            <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".first">Complete</li>
-                            <li data-filter=".second">Running</li>
-                            <li data-filter=".third">Upcoming</li>
+                            <li data-filter="*" class="filter-active">Todos</li>
+                            <li data-filter=".first">Completados</li>
+                            <li data-filter=".second">En proceso</li>
+                            <li data-filter=".third">Por iniciar</li>
                         </ul>
                     </div>
                 </div>
@@ -252,11 +252,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 load-more">
-                        <a class="btn" href="#">Load More</a>
-                    </div>
-                </div>
+
             </div>
         </div>
         <!-- Portfolio End -->
