--- a/about.html
+++ b/about.html
@@ -304,7 +304,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-contact">
-                            <h2>Office Contact</h2>
+                            <h2>Contácto de oficina</h2>
                             <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
                             <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
                             <p><i class="fa fa-envelope"></i>info@example.com</p>
@@ -318,28 +318,16 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="footer-link">
-                            <h2>Services Areas</h2>
-                            <a href="">Building Construction</a>
-                            <a href="">House Renovation</a>
-                            <a href="">Architecture Design</a>
-                            <a href="">Interior Design</a>
-                            <a href="">Painting</a>
-                        </div>
+
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-link">
-                            <h2>Useful Pages</h2>
-                            <a href="">About Us</a>
-                            <a href="">Contact Us</a>
-                            <a href="">Our Team</a>
-                            <a href="">Projects</a>
-                            <a href="">Testimonial</a>
+
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="newsletter">
-                            <h2>Newsletter</h2>
+                            <h2>Información</h2>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare
                                 velit non vulpu
