--- a/portfolio.html
+++ b/portfolio.html
@@ -262,7 +262,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-contact">
-                            <h2>Office Contact</h2>
+                            <h2>Contácto de oficina</h2>
                             <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
                             <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
                             <p><i class="fa fa-envelope"></i>info@example.com</p>
@@ -276,24 +276,10 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="footer-link">
-                            <h2>Services Areas</h2>
-                            <a href="">Building Construction</a>
-                            <a href="">House Renovation</a>
-                            <a href="">Architecture Design</a>
-                            <a href="">Interior Design</a>
-                            <a href="">Painting</a>
-                        </div>
+
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="footer-link">
-                            <h2>Useful Pages</h2>
-                            <a href="">About Us</a>
-                            <a href="">Contact Us</a>
-                            <a href="">Our Team</a>
-                            <a href="">Projects</a>
-                            <a href="">Testimonial</a>
-                        </div>
+
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="newsletter">
