--- a/team.html
+++ b/team.html
@@ -117,11 +117,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Our Team</h2>
+                        <h2>Nuestro equipo</h2>
                     </div>
                     <div class="col-12">
                         <a href="">Home</a>
-                        <a href="">Our Team</a>
+                        <a href="">Nuestro equipo</a>
                     </div>
                 </div>
             </div>
@@ -133,8 +133,8 @@
         <div class="team">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Our Team</p>
-                    <h2>Meet Our Engineer</h2>
+                    <p>Nuestro equipo</p>
+                    <h2>Nuestros ingenieros</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -143,8 +143,8 @@
                                 <img src="img/team-1.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Adam Phillips</h2>
-                                <p>CEO & Founder</p>
+                                <h2>Ivan Canto</h2>
+                                <p>CEO y fundador</p>
                             </div>
                             <div class="team-social">
                                 <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
@@ -160,8 +160,8 @@
                                 <img src="img/team-2.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Dylan Adams</h2>
-                                <p>Civil Engineer</p>
+                                <h2>Rafael Cauich</h2>
+                                <p>Ingeniero civil</p>
                             </div>
                             <div class="team-social">
                                 <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
@@ -177,8 +177,8 @@
                                 <img src="img/team-3.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Jhon Doe</h2>
-                                <p>Interior Designer</p>
+                                <h2>Karina Mo </h2>
+                                <p>Diseñador de interiores</p>
                             </div>
                             <div class="team-social">
                                 <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
@@ -188,190 +188,90 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-4.jpg" alt="Team Image">
+
+                    <!-- Team End -->
+
+
+                    <!-- Footer Start -->
+                    <div class="footer wow fadeIn" data-wow-delay="0.3s">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-6 col-lg-3">
+                                    <div class="footer-contact">
+                                        <h2>Contácto de oficina</h2>
+                                        <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
+                                        <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
+                                        <p><i class="fa fa-envelope"></i>info@example.com</p>
+                                        <div class="footer-social">
+                                            <a href=""><i class="fab fa-twitter"></i></a>
+                                            <a href=""><i class="fab fa-facebook-f"></i></a>
+                                            <a href=""><i class="fab fa-youtube"></i></a>
+                                            <a href=""><i class="fab fa-instagram"></i></a>
+                                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-3">
+
+                                </div>
+                                <div class="col-md-6 col-lg-3">
+
+                                </div>
+                                <div class="col-md-6 col-lg-3">
+                                    <div class="newsletter">
+                                        <h2>Newsletter</h2>
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur
+                                            facilisis ornare
+                                            velit non vulpu
+                                        </p>
+                                        <div class="form">
+                                            <input class="form-control" placeholder="Email here">
+                                            <button class="btn">Submit</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="team-text">
-                                <h2>Josh Dunn</h2>
-                                <p>Painter</p>
+                        </div>
+                        <div class="container footer-menu">
+                            <div class="f-menu">
+                                <a href="">Terms of use</a>
+                                <a href="">Privacy policy</a>
+                                <a href="">Cookies</a>
+                                <a href="">Help</a>
+                                <a href="">FQAs</a>
                             </div>
-                            <div class="team-social">
-                                <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
+                        </div>
+                        <div class="container copyright">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-1.jpg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>Adam Phillips</h2>
-                                <p>CEO & Founder</p>
-                            </div>
-                            <div class="team-social">
-                                <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-2.jpg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>Dylan Adams</h2>
-                                <p>Civil Engineer</p>
-                            </div>
-                            <div class="team-social">
-                                <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-3.jpg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>Jhon Doe</h2>
-                                <p>Interior Designer</p>
-                            </div>
-                            <div class="team-social">
-                                <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-4.jpg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>Josh Dunn</h2>
-                                <p>Painter</p>
-                            </div>
-                            <div class="team-social">
-                                <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Footer End -->
+
+                    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
                 </div>
-            </div>
-        </div>
-        <!-- Team End -->
 
+                <!-- JavaScript Libraries -->
+                <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+                <script src="lib/easing/easing.min.js"></script>
+                <script src="lib/wow/wow.min.js"></script>
+                <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+                <script src="lib/isotope/isotope.pkgd.min.js"></script>
+                <script src="lib/lightbox/js/lightbox.min.js"></script>
+                <script src="lib/waypoints/waypoints.min.js"></script>
+                <script src="lib/counterup/counterup.min.js"></script>
+                <script src="lib/slick/slick.min.js"></script>
 
-        <!-- Footer Start -->
-        <div class="footer wow fadeIn" data-wow-delay="0.3s">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-lg-3">
-                        <div class="footer-contact">
-                            <h2>Office Contact</h2>
-                            <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
-                            <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                            <p><i class="fa fa-envelope"></i>info@example.com</p>
-                            <div class="footer-social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-youtube"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="footer-link">
-                            <h2>Services Areas</h2>
-                            <a href="">Building Construction</a>
-                            <a href="">House Renovation</a>
-                            <a href="">Architecture Design</a>
-                            <a href="">Interior Design</a>
-                            <a href="">Painting</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="footer-link">
-                            <h2>Useful Pages</h2>
-                            <a href="">About Us</a>
-                            <a href="">Contact Us</a>
-                            <a href="">Our Team</a>
-                            <a href="">Projects</a>
-                            <a href="">Testimonial</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="newsletter">
-                            <h2>Newsletter</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare
-                                velit non vulpu
-                            </p>
-                            <div class="form">
-                                <input class="form-control" placeholder="Email here">
-                                <button class="btn">Submit</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container footer-menu">
-                <div class="f-menu">
-                    <a href="">Terms of use</a>
-                    <a href="">Privacy policy</a>
-                    <a href="">Cookies</a>
-                    <a href="">Help</a>
-                    <a href="">FQAs</a>
-                </div>
-            </div>
-            <div class="container copyright">
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer End -->
-
-        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-    </div>
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/slick/slick.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+                <!-- Template Javascript -->
+                <script src="js/main.js"></script>
 </body>
 
 </html>
